# DataScienceDemo

./: .gitignore  README.md  TODO.md  hnsw_search_engine.py  packages.txt  pipeline.txt  pyproject.toml  requirements.txt  retrieval_engine.py  streamlit_app.py
cache/: embeddings_meta.json  index_meta.json  metadata.json  query_records.pkl
my_algo/: hnsw_retriever.py  setup.py
