[project]
name = "semantic-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.8.4",
    "faiss-cpu>=1.13.2",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pybind11>=3.0.4",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.56.0",
    "torch>=2.11.0",
]
